# manage-bookstore

./: README.md  manage-bookstore.cabal
app/: Book.hs  Main.hs
db/: books.txt
