cabal-version:      3.6
name:               manage-bookstore
version:            1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Cong Le
maintainer:         congle@blockchainlabs.asia

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable manage-bookstore
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Book 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                      , directory
    hs-source-dirs:   app
    default-language: Haskell2010
